# tinychat

client/: global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h  tinyChat.pro
client/style/: stylesheet.qss
server/GateServer/: CMakeLists.txt
server/GateServer/include/: AsioIOServicePool.h  CServer.h  ConfigMgr.h  Const.h  HttpConnection.h  LogicSystem.h  RedisConPool.h  RedisMgr.h  Singleton.h  VerifyGrpcClient.h
server/GateServer/src/: AsioIOServicePool.cpp  CServer.cpp  ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  RedisConPool.cpp  RedisMgr.cpp  VerifyGrpcClient.cpp  test.cpp
server/VerifyServer/: config.json  email.js  package-lock.json  package.json  redis.js  server.js
